recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value lenght
	avance(lenght);
               ^Spiral:5: error: not found: value angle
	gauche(angle);
               ^Spiral:6: error: not found: value Spiral
	Spiral(n-1,t ,l+3, i);
        ^